--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/planets/page.tsx", "app/planets/ListOfPlanets.tsx", "app/planets/[id]/page.tsx", "app/page.tsx"],
   "exclude": ["node_modules"]
 }
